<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/wifi_state_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/app_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/wifi_state_textview"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/test_version"
                android:textColor="#000000"
                android:textSize="20sp" >
            </TextView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@string/layout_weight_0"
            android:background="@drawable/result_bg"
            android:minHeight="450dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/station_result_image"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dip"
                android:background="@drawable/list_bg_set"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/TableTextStyleTitle"
                        android:layout_width="0px"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/test_result_station_title" >
                    </TextView>

                    <View
                        android:layout_width="1px"
                        android:layout_height="32dp"
                        android:layout_column="3"
                        android:background="@drawable/line_v" />

                    <TextView
                        android:id="@+id/test_result"
                        style="@style/TableTextStyleTitle"
                        android:layout_width="0px"
                        android:layout_height="64px"
                        android:layout_column="4"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/test_result_result_title" >
                    </TextView>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/divider_line_color" />

                <ListView
                    android:id="@+id/station_listview_layout"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:divider="@drawable/line_h"
                    android:dividerHeight="2px"
                    android:fadingEdge="none"
                    android:scrollbars="none"
                    android:scrollingCache="false"
                    android:transcriptMode="alwaysScroll" >
                </ListView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="@string/layout_weight_1"
            android:background="@drawable/result_bg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textview_sn_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="8dip"
                    android:textColor="#007f00" />
            </LinearLayout>

            <ScrollView
                android:id="@+id/code_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip" >

                <ImageView
                    android:id="@+id/qrcode_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </ScrollView>

            <ScrollView
                android:id="@+id/log_scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" >

                <TextView
                    android:id="@+id/socket_Log"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:background="@drawable/textview_bg" />
            </ScrollView>

            <ScrollView
                android:id="@+id/note_scrollview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:background="@drawable/textview_bg"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/getresult_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:clickable="false"
                    android:editable="false"
                    android:ellipsize="none"
                    android:inputType="textMultiLine"
                    android:longClickable="false"
                    android:singleLine="false"
                    android:textColor="#FF0000"
                    android:textIsSelectable="false" />
            </ScrollView>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dip"
                android:background="@drawable/textview_bg"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/backgrpund_action_list"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_contl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_getresult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/getresult" />

        <Button
            android:id="@+id/btn_autoslt_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/autoslt_quit" />
    </LinearLayout>
</FrameLayout>